--- a/app/collection/collection.html
+++ b/app/collection/collection.html
@@ -59,6 +59,18 @@
     </div>
   </div>
   </div>
-  <div ng-if="collection == null">
-    <h1 class="header center orange-text">Loading...</h1>
+  <div ng-if="collection == null" class="row center">
+    <h1 class="header center orange-text">Loading Posts...</h1>
+            <div class="preloader-wrapper small active center">
+          <div class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+                </div><div class="gap-patch">
+                  <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div>
+    <br><br>
   </div>
