--- a/app/main/main.html
+++ b/app/main/main.html
@@ -10,7 +10,7 @@
       <br><br>
     </div>
   </div>
-<div ng-if="collections != null">
+<div ng-show="collections">
   <div class="section">
     <div class="container">
       <div class="row center">
@@ -38,6 +38,43 @@
             </div>
           </div>
       </div>
+      <div class="row center" ng-show="more && !isLoading">
+        <button class="btn orange" ng-click="loadMore()">Load More</button>
+        </div>
+        <div class="row center" ng-show="isLoading">
+        <div class="preloader-wrapper small active">
+          <div class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+                </div><div class="gap-patch">
+                  <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+          </div>
+      </div>
     </div>
   </div>
+  </div>
+  <div ng-show="isMainLoading">
+  <div class="section">
+    <div class="container">
+      <div class="row center">
+        <h5 class="header col s12 light">Loading Previous Collections</h5>
+      </div>
+      <div class="row center">
+        <div class="preloader-wrapper small active">
+          <div class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+                </div><div class="gap-patch">
+                  <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div>      
+      </div>
+    </div>
   </div>
