Empty array check

--- a/app/main/main.html
+++ b/app/main/main.html
@@ -10,7 +10,7 @@
       <br><br>
     </div>
   </div>
-<div ng-show="collections">
+<div ng-show="collections && collections.length > 0">
   <div class="section">
     <div class="container">
       <div class="row center">
