--- a/app/main/main.html
+++ b/app/main/main.html
@@ -19,25 +19,25 @@
       <div class="row center">
         <div class="col s12 m4" ng-repeat="collection in collections">
             <div class="card">
-              <div class="card-image">
-                <img ng-src="{{collection.media_link}}" src="images/default.jpg">
-              </div>
-              <span class="card-title">{{collection.name || "Untitled"}}</span>
-              <div class="card-content">
-                <p class="left-align">Tag: {{collection.tag}}</p>
-                <p class="left-align">{{collection.start_time * 1000 | date:'MM-dd-yyyy'}} to {{collection.end_time * 1000 | date:'MM-dd-yyyy'}}</p>
-              </div>
-              <div class="card-action">
-                <div ng-if="collection.media_link != null">
-                  <a href="#!/collection?id={{collection.id}}" class="blue-text">View</a>
+                <div class="card-image">
+                  <img ng-src="{{collection.media_link}}" src="images/default.jpg" class="responsive-img card-media">
                 </div>
-                <div ng-if="collection.media_link == null && collection.next_url != 'No more'">
-                  <a href="#!/" class="blue-text">Posts Still Loading</a>
+                <span class="card-title">{{collection.name || "Untitled"}}</span>
+                <div class="card-content">
+                  <p class="left-align">Tag: {{collection.tag}}</p>
+                  <p class="left-align">{{collection.start_time * 1000 | date:'MM-dd-yyyy'}} to {{collection.end_time * 1000 | date:'MM-dd-yyyy'}}</p>
                 </div>
-                <div ng-if="collection.media_link == null && collection.next_url == 'No more'">
-                  No photos to view
+                <div class="card-action">
+                  <div ng-if="collection.media_link != null">
+                    <a href="#!/collection?id={{collection.id}}" class="blue-text">View</a>
+                  </div>
+                  <div ng-if="collection.media_link == null && collection.next_url != 'No more'">
+                    <a href="#!/" class="blue-text">Posts Still Loading</a>
+                  </div>
+                  <div ng-if="collection.media_link == null && collection.next_url == 'No more'">
+                    No photos to view
+                  </div>
                 </div>
-              </div>
             </div>
           </div>
       </div>
