Tab in new window

--- a/app/collection/collection.html
+++ b/app/collection/collection.html
@@ -34,7 +34,7 @@
                 <p>Tag date: {{post.tag_time ? (post.tag_time * 1000 | date:'MM-dd-yyyy') : 'Unknown'}}</p>
               </div>
               <div class="card-action">
-                <a href="{{post.insta_link}}" class="blue-text center">Link</a>
+                <a target="_blank" href="{{post.insta_link}}" class="blue-text center">Link</a>
               </div>
             </div>
           </div>
